Implemented feature/audit, but need to verify bugs, and add real-time update, more user experience